--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -20,3 +20,15 @@
   }
 
 }
+
+@media (min-widht: 1700px) {
+  #page-home {
+    background-position-x: 40vw;
+  }
+}
+
+@media (min-height: 760px) {
+  #page-home {
+    background-position-y: 200px;
+  }
+}
